# zketch

./: .gitignore  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compile_commands.json
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  ROADMAP.md  spesifikasi kebutuhan proyek.md
example/game_loop/: main.cpp
example/hello_window/: main.cpp
include/zk/core/: application.hpp  main_thread_queue.hpp  message_loop.hpp
include/zk/error/: error.hpp
include/zk/event/: event_dispatcher.hpp  event_types.hpp
include/zk/io/: widget_parser.hpp  widget_serializer.hpp
include/zk/log/: logger.hpp
include/zk/metric/: basic_pair.hpp  pos.hpp  rect.hpp  size.hpp
include/zk/render/: renderer.hpp
include/zk/ui/: button.hpp  color.hpp  font_config.hpp  label.hpp  panel.hpp  widget_base.hpp  window.hpp
include/zk/util/: arithmetic.hpp  arithmetic_op.hpp  clamp.hpp  enums.hpp  native_wrapper.hpp
src/: main.cpp
src/core/: application.cpp  main_thread_queue.cpp  message_loop.cpp
src/event/: event_dispatcher.cpp
src/io/: widget_parser.cpp  widget_serializer.cpp
src/log/: logger.cpp
src/render/: renderer.cpp
src/ui/: button.cpp  label.cpp  panel.cpp  window.cpp
test/core/: test_main_thread_queue.cpp  test_message_loop.cpp
test/error/: test_error.cpp
test/event/: test_event_dispatcher.cpp
test/io/: test_widget_io.cpp  test_widget_parser_errors.cpp
test/log/: test_logger.cpp
test/metric/: test_arithmetic_clamp.cpp  test_pos.cpp  test_size.cpp
test/render/: test_renderer.cpp
test/ui/: test_button.cpp  test_label.cpp  test_panel.cpp  test_window.cpp
test/util/: test_native_wrapper.cpp
